torch-sys/src/c_generated.rs


extern "C" {
    pub fn atg_abs(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_abs_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_abs_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_acos(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_acos_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_acos_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_adaptive_avg_pool1d(self_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_adaptive_avg_pool2d(self_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_adaptive_avg_pool2d_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_adaptive_avg_pool2d_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_adaptive_avg_pool2d_out(output_: *mut C_tensor, self_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_adaptive_avg_pool3d(self_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_adaptive_avg_pool3d_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_adaptive_avg_pool3d_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_adaptive_avg_pool3d_out(output_: *mut C_tensor, self_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_adaptive_max_pool1d(self_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_adaptive_max_pool2d(self_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_adaptive_max_pool2d_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, indices_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_adaptive_max_pool2d_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, indices_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_adaptive_max_pool2d_out(output_: *mut C_tensor, indices_: *mut C_tensor, self_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_adaptive_max_pool3d(self_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_adaptive_max_pool3d_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, indices_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_adaptive_max_pool3d_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, indices_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_adaptive_max_pool3d_out(output_: *mut C_tensor, indices_: *mut C_tensor, self_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_add(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_add1(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_add_(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_add_1(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_add_out(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addbmm(self_: *mut C_tensor, batch1_: *mut C_tensor, batch2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addbmm_(self_: *mut C_tensor, batch1_: *mut C_tensor, batch2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addbmm_out(result_: *mut C_tensor, self_: *mut C_tensor, batch1_: *mut C_tensor, batch2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addcdiv(self_: *mut C_tensor, tensor1_: *mut C_tensor, tensor2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addcdiv_(self_: *mut C_tensor, tensor1_: *mut C_tensor, tensor2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addcdiv_out(result_: *mut C_tensor, self_: *mut C_tensor, tensor1_: *mut C_tensor, tensor2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addcmul(self_: *mut C_tensor, tensor1_: *mut C_tensor, tensor2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addcmul_(self_: *mut C_tensor, tensor1_: *mut C_tensor, tensor2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addcmul_out(result_: *mut C_tensor, self_: *mut C_tensor, tensor1_: *mut C_tensor, tensor2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addmm(self_: *mut C_tensor, mat1_: *mut C_tensor, mat2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addmm_(self_: *mut C_tensor, mat1_: *mut C_tensor, mat2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addmm_out(result_: *mut C_tensor, self_: *mut C_tensor, mat1_: *mut C_tensor, mat2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addmv(self_: *mut C_tensor, mat_: *mut C_tensor, vec_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addmv_(self_: *mut C_tensor, mat_: *mut C_tensor, vec_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addmv_out(result_: *mut C_tensor, self_: *mut C_tensor, mat_: *mut C_tensor, vec_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addr(self_: *mut C_tensor, vec1_: *mut C_tensor, vec2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addr_(self_: *mut C_tensor, vec1_: *mut C_tensor, vec2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_addr_out(result_: *mut C_tensor, self_: *mut C_tensor, vec1_: *mut C_tensor, vec2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_alias(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_all(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_all1(self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_all_out(result_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_alpha_dropout(input_: *mut C_tensor, p_: f64, train_: c_int) -> *mut *mut C_tensor;
    pub fn atg_alpha_dropout_(self_: *mut C_tensor, p_: f64, train_: c_int) -> *mut *mut C_tensor;
    pub fn atg_any(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_any1(self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_any_out(result_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_arange(end_: *mut C_scalar, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_arange1(start_: *mut C_scalar, end_: *mut C_scalar, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_arange2(start_: *mut C_scalar, end_: *mut C_scalar, step_: *mut C_scalar, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_arange_out(result_: *mut C_tensor, end_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_arange_out1(result_: *mut C_tensor, start_: *mut C_scalar, end_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_arange_out2(result_: *mut C_tensor, start_: *mut C_scalar, end_: *mut C_scalar, step_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_argmax(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_argmax1(self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_argmin(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_argmin1(self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_as_strided(self_: *mut C_tensor, size_data: *const i64, size_len: c_int, stride_data: *const i64, stride_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_as_strided1(self_: *mut C_tensor, size_data: *const i64, size_len: c_int, stride_data: *const i64, stride_len: c_int, storage_offset_: i64) -> *mut *mut C_tensor;
    pub fn atg_as_strided_(self_: *mut C_tensor, size_data: *const i64, size_len: c_int, stride_data: *const i64, stride_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_as_strided_1(self_: *mut C_tensor, size_data: *const i64, size_len: c_int, stride_data: *const i64, stride_len: c_int, storage_offset_: i64) -> *mut *mut C_tensor;
    pub fn atg_asin(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_asin_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_asin_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_atan(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_atan2(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_atan2_(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_atan2_out(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_atan_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_atan_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_avg_pool1d(self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, ceil_mode_: c_int, count_include_pad_: c_int) -> *mut *mut C_tensor;
    pub fn atg_avg_pool2d(self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, ceil_mode_: c_int, count_include_pad_: c_int) -> *mut *mut C_tensor;
    pub fn atg_avg_pool2d_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, ceil_mode_: c_int, count_include_pad_: c_int) -> *mut *mut C_tensor;
    pub fn atg_avg_pool2d_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, ceil_mode_: c_int, count_include_pad_: c_int) -> *mut *mut C_tensor;
    pub fn atg_avg_pool2d_out(output_: *mut C_tensor, self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, ceil_mode_: c_int, count_include_pad_: c_int) -> *mut *mut C_tensor;
    pub fn atg_avg_pool3d(self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, ceil_mode_: c_int, count_include_pad_: c_int) -> *mut *mut C_tensor;
    pub fn atg_avg_pool3d_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, ceil_mode_: c_int, count_include_pad_: c_int) -> *mut *mut C_tensor;
    pub fn atg_avg_pool3d_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, ceil_mode_: c_int, count_include_pad_: c_int) -> *mut *mut C_tensor;
    pub fn atg_avg_pool3d_out(output_: *mut C_tensor, self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, ceil_mode_: c_int, count_include_pad_: c_int) -> *mut *mut C_tensor;
    pub fn atg_baddbmm(self_: *mut C_tensor, batch1_: *mut C_tensor, batch2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_baddbmm_(self_: *mut C_tensor, batch1_: *mut C_tensor, batch2_: *mut C_tensor) -> *mut *mut C_tensor;
